--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ li.nav-links a:hover {
     display: block;
     margin: 0 auto;
     clear: both;
-    padding-top: 112px;
+    padding-top: 10px;
     padding-bottom: 20px;
 }
 
@@ -80,4 +80,24 @@ li.nav-links a:hover {
     padding-bottom: 0;
     width: 100%;
     
+}
+
+footer ul li {
+    display: inline;
+    color: #666666;
+    font-size: 14px;
+    padding: 13px;
+}
+
+footer ul {
+    float: left;
+    padding: 1px;
+}
+
+footer ul a:hover {
+    text-decoration: underline;
+}
+
+.footer-right {
+    float: right;
 }
