--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ li.nav-links a:hover {
 footer ul li {
     display: inline;
     color: #666666;
-    font-size: 14px;
-    padding: 13px;
+    font-size: 16px;
+    padding: 10px;
 }
 
 footer ul {
@@ -100,4 +100,89 @@ footer ul a:hover {
 
 .footer-right {
     float: right;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 400px) {
+
+    li.nav-links a {
+    display: none;
+    }
+
+    #google_logo {
+    padding: 0;
+    }
+
+    .buttons {
+    display: none;
+    }
+
+    #form-search {
+    width: 80%;
+    }
+
+    footer {
+    bottom: 0;
+    }
+
+    footer ul {
+    float: none;
+    padding-bottom: 2px;
+    }
+
+    .footer-left {
+    text-align: center;
+    margin: auto; 
+    padding-top: 10px;
+    }
+
+    .footer-right {
+    float: none;
+    text-align: center;
+    }
+}
+
+@media screen and (max-width: 565px) {
+    
+    li.nav-links a {
+    display: none;
+    }
+
+    #google_logo {
+    padding: 0;
+    }
+
+    .buttons {
+    display: none;
+    }
+    
+    #form-search {
+    width: 80%;
+    }
+
+    footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;
+    }
+
+    footer ul {
+    float: none;
+    padding-bottom: 2px;
+    }
+    
+    .footer-left {
+      text-align: center;
+      margin: auto; 
+      padding-top: 10px;
+       
+    }
+     
+    .footer-right {
+      float: none;
+      text-align: center;
+      
+    }
 }
